src/objects/QA_Review__c.object
<CustomObject>
    <description>Quality Assurance Reviews of Providers</description>
    <fields>
        <fullName>Audit_Email__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Audit Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Phone_Number__c</fullName>
        <description>Provider Business Account Vision Care Location Phone Number</description>
        <formula>Contact_Role__r.Account__r.Vision_Care_Location_Phone_Number__c</formula>
        <label>Audit Phone Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Physical_Address_Street__c</fullName>
        <description>Account Record - Shipping Street</description>
        <formula>Contact_Role__r.Account__r.ShippingStreet</formula>
        <label>Audit Physical Address Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Audit_Physical_City_State_ZIP__c</fullName>
        <formula>Contact_Role__r.Account__r.ShippingCity + &apos;, &apos; + Contact_Role__r.Account__r.ShippingState + &apos;  &apos; +  Contact_Role__r.Account__r.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Audit Physical City, State, ZIP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clinical_Auditor_Assign_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Clinical Auditor Assign Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Clinical_Auditor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Default blank. Doctor assigned to complete the review</description>
        <label>Clinical Auditor</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Reviews1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Comments</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Role__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact Role</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Contact_Role__c.Type__c</field>
                <operation>equals</operation>
                <value>Doctor-Employee, Doctor-Owner</value>
            </filterItems>
            <filterItems>
                <field>Contact_Role__c.Active_or_Future_Vision_Care_Relationshi__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <infoMessage>You must select a Doctor-Owner or Doctor-Employee that is an Active Vision Care Provider.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact_Role__c</referenceTo>
        <relationshipLabel>QA Reviews</relationshipLabel>
        <relationshipName>QA_Reviews</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Degree__c</fullName>
        <description>Populated from Contact record.</description>
        <formula>TEXT(Provider_Name__r.Degree__c)</formula>
        <label>Degree</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Doctor_ID__c</fullName>
        <formula>Contact_Role__r.Contact__r.Doctor_ID__c</formula>
        <label>Doctor ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DocuSign_Completion_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DocuSign Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Restitution_Amount_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Exam Restitution Amt Received/Paid/Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exam_Restitution_Amount__c</fullName>
        <label>Exam Restitution Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$50</fullName>
                </value>
                <value>
                    <fullName>$60</fullName>
                </value>
                <value>
                    <fullName>$70</fullName>
                </value>
                <value>
                    <fullName>$80</fullName>
                </value>
                <value>
                    <fullName>$90</fullName>
                </value>
                <value>
                    <fullName>$100</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Focused_Review_Type__c</fullName>
        <label>Focused Review Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Requested by Committee</fullName>
                </value>
                <value>
                    <fullName>Requested by Another Department</fullName>
                </value>
                <value>
                    <fullName>Diabetic</fullName>
                </value>
                <value>
                    <fullName>Complaint &amp; Grievance History</fullName>
                </value>
                <value>
                    <fullName>Miscellaneous</fullName>
                </value>
                <value>
                    <fullName>Poor QA History</fullName>
                </value>
                <value>
                    <fullName>Unusual Utilization Patterns</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Grade_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Grade Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Medical_Points_Earned__c</fullName>
        <label>Medical Points Earned</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Medical_Points_Possible__c</fullName>
        <label>Medical Points Possible</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NPI__c</fullName>
        <description>Populated from Contact record.</description>
        <formula>Provider_Name__r.NPI__c</formula>
        <label>NPI</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_DocuSign_Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Original DocuSign Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Overall_Compliance_Percentage__c</fullName>
        <label>Overall Compliance Percentage</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Provider_Formal_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Provider Formal Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Provider Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Eye Care Professional</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>QA Reviews</relationshipLabel>
        <relationshipName>QA_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Administrator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Administrator</label>
        <referenceTo>User</referenceTo>
        <relationshipName>QA_Reviews</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Age_10__c</fullName>
        <label>QA Patient Age 10</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Age_1__c</fullName>
        <label>QA Patient Age 1</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Age_2__c</fullName>
        <label>QA Patient Age 2</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Claim_Number_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Authorization Number 10</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Claim_Number_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Authorization Number 1</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Claim_Number_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Authorization Number 2</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Date_of_Service_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Date of Service 10</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Date_of_Service_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Date of Service 1</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Date_of_Service_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Date of Service 2</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Name_10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Name 10</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Name_1__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Name 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Patient_Name_2__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>QA Patient Name 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QA_Review_DTP__c</fullName>
        <description>Identifies how many days it took to process the QA Review record.</description>
        <formula>Result_Letter_Date__c  -  Review_Received_Date__c</formula>
        <label>QA Review DTP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QA_Review_Status__c</fullName>
        <label>QA Review Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress QA Admin</fullName>
                </value>
                <value>
                    <fullName>Submit for Claims</fullName>
                </value>
                <value>
                    <fullName>Re-Submit for Claims</fullName>
                </value>
                <value>
                    <fullName>Assigned to Clinical Auditor</fullName>
                </value>
                <value>
                    <fullName>In Progress Clinical Auditor</fullName>
                </value>
                <value>
                    <fullName>Clinical Auditor Complete</fullName>
                </value>
                <value>
                    <fullName>Completed Audit Pass</fullName>
                </value>
                <value>
                    <fullName>Completed Audit Failed</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Closed - Non-responder</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                    <isActive>false</isActive>
                    <label>Fail</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                    <isActive>false</isActive>
                    <label>In Progress</label>
                </value>
                <value>
                    <fullName>Pass</fullName>
                    <isActive>false</isActive>
                    <label>Pass</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Re_Audit_Amount_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Re-Audit Amt Received/Paid/Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Re_Audit_Amount__c</fullName>
        <label>Re-Audit Amount</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$250</fullName>
                </value>
                <value>
                    <fullName>$500</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Result_Letter_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Result Letter Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Date_Scheduled__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review Date Scheduled</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Level__c</fullName>
        <label>Review Level</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial / Educational</fullName>
                    <default>true</default>
                    <label>Initial / Educational</label>
                </value>
                <value>
                    <fullName>First Formal</fullName>
                </value>
                <value>
                    <fullName>Second Formal</fullName>
                </value>
                <value>
                    <fullName>Third Formal</fullName>
                </value>
                <value>
                    <fullName>Interrater</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Review/Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Review_Results__c</fullName>
        <label>Review Results</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Review_Type__c</fullName>
        <label>Review Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Standard</fullName>
                    <default>true</default>
                    <label>Standard</label>
                </value>
                <value>
                    <fullName>Focus</fullName>
                </value>
                <value>
                    <fullName>Field</fullName>
                </value>
                <value>
                    <fullName>Mail-In</fullName>
                    <isActive>false</isActive>
                    <label>Mail-In</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Handling_Comments__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Special Handling Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Special_Handling__c</fullName>
        <label>Special Handling</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CPG</fullName>
                </value>
                <value>
                    <fullName>Incomplete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Today_s_Date__c</fullName>
        <formula>CASE(MONTH(TODAY()),
					1, &quot;January&quot;, 
					2, &quot;February&quot;,
					3, &quot;March&quot;, 
					4, &quot;April&quot;, 
					5, &quot;May&quot;, 
					6, &quot;June&quot;,
					7, &quot;July&quot;,
					8, &quot;August&quot;,
					9, &quot;September&quot;, 
					10, &quot;October&quot;, 
					11, &quot;November&quot;, 
					12, &quot;December&quot;, &quot;None&quot;) 
					
					&amp; &quot; &quot; 
					&amp; TEXT(DAY(TODAY()))
					&amp; &quot;, &quot;
					&amp;	TEXT(YEAR(TODAY()))</formula>
        <label>Today&apos;s Date</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vision_Care_Location_Key__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Vision Care Location Key</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QA Review</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>QA_Administrator__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Level__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>Original_DocuSign_Sent_Date__c</columns>
        <columns>DocuSign_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Assigned_to_Clinical_Auditor</fullName>
        <columns>NAME</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>QA_Administrator__c</columns>
        <columns>QA_Review_Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor</value>
        </filters>
        <label>Assigned to Clinical Auditor</label>
    </listViews>
    <listViews>
        <fullName>Ed_s_Open_Assigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>Review_Received_Date__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Ed Andersen</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Ed&apos;s Open Assigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>Lee_Favede_Open_Assigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>Review_Received_Date__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Lee Favede</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Lee&apos;s Open Assigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>Marvin_s_Open_Assigned_QA_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Marvin Nakamoto</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Marvin&apos;s Open Assigned QA Reviews</label>
    </listViews>
    <listViews>
        <fullName>New_First_and_Second_Formal_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Review_Level__c</columns>
        <columns>Provider_Name__c</columns>
        <columns>QA_Administrator__c</columns>
        <columns>Review_Date_Scheduled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>Review_Level__c</field>
            <operation>equals</operation>
            <value>First Formal,Second Formal</value>
        </filters>
        <label>New First and Second Formal Reviews</label>
    </listViews>
    <listViews>
        <fullName>New_QA_Reviews_Not_Assigned</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Review_Type__c</columns>
        <columns>Review_Level__c</columns>
        <columns>QA_Administrator__c</columns>
        <columns>Review_Date_Scheduled__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <filters>
            <field>QA_Administrator__c</field>
            <operation>equals</operation>
        </filters>
        <label>New QA Reviews - Not Assigned</label>
    </listViews>
    <listViews>
        <fullName>Open_QA_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Review_Level__c</columns>
        <columns>Review_Type__c</columns>
        <columns>QA_Administrator__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>Review_Received_Date__c</columns>
        <columns>Review_Date_Scheduled__c</columns>
        <columns>DocuSign_Completion_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>notEqual</operation>
            <value>Completed Audit Pass,Completed Audit Failed,Closed,Closed - Non-responder</value>
        </filters>
        <label>Open QA Reviews</label>
    </listViews>
    <listViews>
        <fullName>Susan_s_Open_Assigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Susan Wright</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Susan&apos;s Open Assigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>Tanya_s_Open_Assigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Tanya Markis-Meyer</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Tanya&apos;s Open Assigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>Thomas_Wing_Open_Assigned_Review</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Thomas Wing</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Thomas&apos;s Open Assigned Reviews</label>
    </listViews>
    <listViews>
        <fullName>Wes_s_Open_Assigned_Reviews</fullName>
        <columns>NAME</columns>
        <columns>Provider_Name__c</columns>
        <columns>Clinical_Auditor__c</columns>
        <columns>QA_Review_Status__c</columns>
        <columns>QA_Administrator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Clinical_Auditor__c</field>
            <operation>equals</operation>
            <value>Wes Umeda</value>
        </filters>
        <filters>
            <field>QA_Review_Status__c</field>
            <operation>equals</operation>
            <value>Assigned to Clinical Auditor,In Progress Clinical Auditor</value>
        </filters>
        <label>Wes&apos;s Open Assigned Reviews</label>
    </listViews>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>QA Review Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>QA Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>